# serpapi-mcp-flight-search

./: .gitignore  README.md  pyproject.toml
mcp_flight_search/: server.py
mcp_flight_search/services/: search_service.py  serpapi_client.py
mcp_flight_search/utils/: logging.py
test/: test_api_response.py  test_iterative_multicity.py  test_multicity_structure.py  test_params_sent.py
